--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -58,5 +58,5 @@
    }
 
    .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-    font-family: 'OfficinaSerifC';
+    font-family: "officina", "OpenSans", sans-serif;
    }
