--- a/src/components/card-section/card-section.css
+++ b/src/components/card-section/card-section.css
@@ -26,7 +26,7 @@
     align-items: flex-end;
     width: 158px;
     height: 30px;
-    font-family: OfficinaSerifC;
+    font-family: 'officina', 'OpenSans', sans-serif;
     font-size: 19px;
     font-weight: normal;
     font-style: normal;
