--- a/src/components/root/tabs-learning/subtabs-managment/subtabs-managment.css
+++ b/src/components/root/tabs-learning/subtabs-managment/subtabs-managment.css
@@ -19,22 +19,23 @@ h2.part-header {
     
 }
 .develop-prog-card {
-    height: 170px;
+    max-height: 250px;
     border-radius: 10px;
     box-shadow: 0 2px 70px 0 rgba(0, 0, 0, 0.09);
     background-color: #ffffff;
     margin-left: -15px;
     margin-right: -15px;
     margin-bottom: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .develop-card-wrapper {
     justify-content: space-between;
-    margin-left: 40px !important;
-    margin-right: 40px !important;
+
 }
 .dev-prog-name {
-    font-family: OfficinaSerifC;
+    font-family: 'officina', 'OpenSans', sans-serif;
   font-size: 24px;
   font-weight: normal;
   font-stretch: normal;
@@ -42,7 +43,6 @@ h2.part-header {
   line-height: 1.13;
   letter-spacing: normal;
   color: #282828;
-  margin-top: 15px;
   margin-bottom: 10px;
 }
 .dev-prog-button button {
@@ -55,4 +55,7 @@ h2.part-header {
     box-shadow: 0 6px 5px 0 rgba(116, 52, 0, 0.4), 0 4px 0 0 #ffdbab, 0 3px 0 0 #ebb26a;
     background-image: linear-gradient(to bottom, #f8c25b, #fdd06a);
     border: none ;
+}
+.card-img-top-develop{
+  width: 100%;
 }
