--- a/src/components/specialist/list/list.css
+++ b/src/components/specialist/list/list.css
@@ -15,6 +15,12 @@
 h2.sub_header {
     margin-left: 1rem;
 }
+.disclaimer{
+    text-align: center;
+    font-family: 'Officina';
+    font-size: 1rem;
+    margin-bottom: 20px;
+}
 
 @media (max-width: 768px) {
 
@@ -24,5 +30,7 @@ h2.sub_header {
     h2.sub_header {
         font-size: 20px;
     }
-
+    .disclaimer{
+        font-size: 0.9rem;
+    }
 }
